iptables
# Generated by iptables-save v1.4.21 on Tue Dec 12 19:24:02 2017
*nat
:PREROUTING ACCEPT [1159:269536]
:INPUT ACCEPT [1098:261378]
:OUTPUT ACCEPT [16003227:959596447]
:POSTROUTING ACCEPT [16003284:959604397]
COMMIT
# Completed on Tue Dec 12 19:24:02 2017
# Generated by iptables-save v1.4.21 on Tue Dec 12 19:24:02 2017
*mangle
:PREROUTING ACCEPT [594084051:53963212372]
:INPUT ACCEPT [592852207:53859711110]
:FORWARD ACCEPT [1231847:103502228]
:OUTPUT ACCEPT [592761148:53750299372]
:POSTROUTING ACCEPT [593992992:53853801444]
COMMIT
# Completed on Tue Dec 12 19:24:02 2017
# Generated by iptables-save v1.4.21 on Tue Dec 12 19:24:02 2017
*raw
:PREROUTING ACCEPT [254737717:22429997662]
:OUTPUT ACCEPT [254113028:22285150881]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A OUTPUT -j neutron-openvswi-OUTPUT
-A neutron-openvswi-PREROUTING -m physdev --physdev-in qvb5e77de0c-2b -m comment --comment "Set zone for de0c-2ba2-4d7f-b5c8-c182f247065c" -j CT --zone 5
-A neutron-openvswi-PREROUTING -i qvb5e77de0c-2b -m comment --comment "Set zone for de0c-2ba2-4d7f-b5c8-c182f247065c" -j CT --zone 5
-A neutron-openvswi-PREROUTING -m physdev --physdev-in tap5e77de0c-2b -m comment --comment "Set zone for de0c-2ba2-4d7f-b5c8-c182f247065c" -j CT --zone 5
COMMIT
# Completed on Tue Dec 12 19:24:02 2017
# Generated by iptables-save v1.4.21 on Tue Dec 12 19:24:02 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [6:320]
:neutron-filter-top - [0:0]
:neutron-openvswi-FORWARD - [0:0]
:neutron-openvswi-INPUT - [0:0]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-i5e77de0c-2 - [0:0]
:neutron-openvswi-local - [0:0]
:neutron-openvswi-o5e77de0c-2 - [0:0]
:neutron-openvswi-s5e77de0c-2 - [0:0]
:neutron-openvswi-sg-chain - [0:0]
:neutron-openvswi-sg-fallback - [0:0]
-A INPUT -j neutron-openvswi-INPUT
-A INPUT -s 192.168.69.84/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_192.168.69.84" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8042 -m comment --comment "001 aodh-api incoming aodh_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8777 -m comment --comment "001 ceilometer-api incoming ceilometer_api" -j ACCEPT
-A INPUT -s 192.168.69.84/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_192.168.69.84" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8776 -m comment --comment "001 cinder-api incoming cinder_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 9292 -m comment --comment "001 glance incoming glance_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8041 -m comment --comment "001 gnocchi-api incoming gnocchi_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80 -m comment --comment "001 horizon 80 incoming" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 6385 -m comment --comment "001 ironic-api incoming ironic-api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 5000,35357 -m comment --comment "001 keystone incoming keystone" -j ACCEPT
-A INPUT -s 192.168.69.84/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_192.168.69.84" -j ACCEPT
-A INPUT -p udp -m multiport --dports 67 -m comment --comment "001 neutron dhcp in incoming neutron_dhcp_in_192.168.69.84" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 9696 -m comment --comment "001 neutron server incoming neutron_server_192.168.69.84" -j ACCEPT
-A INPUT -s 192.168.69.84/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_192.168.69.84_192.168.69.84" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8773,8774,8775,8778 -m comment --comment "001 nova api incoming nova_api" -j ACCEPT
-A INPUT -s 192.168.69.84/32 -p tcp -m multiport --dports 5900:5999 -m comment --comment "001 nova compute incoming nova_compute" -j ACCEPT
-A INPUT -s 192.168.69.84/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_192.168.69.84_192.168.69.84" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 6080 -m comment --comment "001 novncproxy incoming" -j ACCEPT
-A INPUT -s 192.168.69.84/32 -p tcp -m multiport --dports 6379 -m comment --comment "001 redis service incoming redis service from 192.168.69.84" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8080 -m comment --comment "001 swift proxy incoming swift_proxy" -j ACCEPT
-A INPUT -s 192.168.69.84/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_192.168.69.84" -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j neutron-filter-top
-A FORWARD -j neutron-openvswi-FORWARD
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -j neutron-filter-top
-A OUTPUT -j neutron-openvswi-OUTPUT
-A OUTPUT -p udp -m multiport --dports 68 -m comment --comment "001 neutron dhcp out outgoing neutron_dhcp_out_192.168.69.84" -j ACCEPT
-A neutron-filter-top -j neutron-openvswi-local
-A neutron-openvswi-FORWARD -m physdev --physdev-out tap5e77de0c-2b --physdev-is-bridged -m comment --comment "Direct traffic from the VM interface to the security group chain." -j neutron-openvswi-sg-chain
-A neutron-openvswi-FORWARD -m physdev --physdev-in tap5e77de0c-2b --physdev-is-bridged -m comment --comment "Direct traffic from the VM interface to the security group chain." -j neutron-openvswi-sg-chain
-A neutron-openvswi-INPUT -m physdev --physdev-in tap5e77de0c-2b --physdev-is-bridged -m comment --comment "Direct incoming traffic from VM to the security group chain." -j neutron-openvswi-o5e77de0c-2
-A neutron-openvswi-i5e77de0c-2 -m state --state RELATED,ESTABLISHED -m comment --comment "Direct packets associated with a known session to the RETURN chain." -j RETURN
-A neutron-openvswi-i5e77de0c-2 -d 172.16.0.16/32 -p udp -m udp --sport 67 --dport 68 -j RETURN
-A neutron-openvswi-i5e77de0c-2 -d 255.255.255.255/32 -p udp -m udp --sport 67 --dport 68 -j RETURN
-A neutron-openvswi-i5e77de0c-2 -p tcp -j RETURN
-A neutron-openvswi-i5e77de0c-2 -m set --match-set NIPv4da904193-1cca-4ea9-af8f src -j RETURN
-A neutron-openvswi-i5e77de0c-2 -m state --state INVALID -m comment --comment "Drop packets that appear related to an existing connection (e.g. TCP ACK/FIN) but do not have an entry in conntrack." -j DROP
-A neutron-openvswi-i5e77de0c-2 -m comment --comment "Send unmatched traffic to the fallback chain." -j neutron-openvswi-sg-fallback
-A neutron-openvswi-o5e77de0c-2 -s 0.0.0.0/32 -d 255.255.255.255/32 -p udp -m udp --sport 68 --dport 67 -m comment --comment "Allow DHCP client traffic." -j RETURN
-A neutron-openvswi-o5e77de0c-2 -j neutron-openvswi-s5e77de0c-2
-A neutron-openvswi-o5e77de0c-2 -p udp -m udp --sport 68 --dport 67 -m comment --comment "Allow DHCP client traffic." -j RETURN
-A neutron-openvswi-o5e77de0c-2 -p udp -m udp --sport 67 --dport 68 -m comment --comment "Prevent DHCP Spoofing by VM." -j DROP
-A neutron-openvswi-o5e77de0c-2 -m state --state RELATED,ESTABLISHED -m comment --comment "Direct packets associated with a known session to the RETURN chain." -j RETURN
-A neutron-openvswi-o5e77de0c-2 -j RETURN
-A neutron-openvswi-o5e77de0c-2 -m state --state INVALID -m comment --comment "Drop packets that appear related to an existing connection (e.g. TCP ACK/FIN) but do not have an entry in conntrack." -j DROP
-A neutron-openvswi-o5e77de0c-2 -m comment --comment "Send unmatched traffic to the fallback chain." -j neutron-openvswi-sg-fallback
-A neutron-openvswi-s5e77de0c-2 -s 172.16.0.16/32 -m mac --mac-source FA:16:3E:01:59:3E -m comment --comment "Allow traffic from defined IP/MAC pairs." -j RETURN
-A neutron-openvswi-s5e77de0c-2 -m comment --comment "Drop traffic without an IP/MAC allow rule." -j DROP
-A neutron-openvswi-sg-chain -m physdev --physdev-out tap5e77de0c-2b --physdev-is-bridged -m comment --comment "Jump to the VM specific chain." -j neutron-openvswi-i5e77de0c-2
-A neutron-openvswi-sg-chain -m physdev --physdev-in tap5e77de0c-2b --physdev-is-bridged -m comment --comment "Jump to the VM specific chain." -j neutron-openvswi-o5e77de0c-2
-A neutron-openvswi-sg-chain -j ACCEPT
-A neutron-openvswi-sg-fallback -m comment --comment "Default drop rule for unmatched traffic." -j DROP
COMMIT
# Completed on Tue Dec 12 19:24:02 2017
